# share-diffs

./: .gitconfig  .gitignore  LICENSE  README.md  public_key.pem  pyproject.toml  qr_reader.html
share_diffs/: create_key.py  crypto.py  main.py  pdfs.py  qr.py  repos.py
tests/: test_crypto.py  test_integration.py
